--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="payments">
         <table>
-          <caption class="payments__label">Payments</div>
+          <caption class="payments__label">Payments</caption>
           <thead>
             <tr>
               <th>Date</th>
